--- a/EfCoreSample.Persistance/EfCoreSample.Persistance.csproj
+++ b/EfCoreSample.Persistance/EfCoreSample.Persistance.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190710093159_des.cs" />
+    <Compile Remove="Migrations\20190710093159_des.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
