--- a/EfCoreSample.Doman/EfCoreSample.Doman.csproj
+++ b/EfCoreSample.Doman/EfCoreSample.Doman.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
+    <PackageReference Include="FluentValidation" Version="8.4.0" />
     </ItemGroup>
 
 </Project>
